--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "parcel": "^2.11.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0",
